ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* V1.2.14 - 
- System: Workaround for sdl12-compat library bug affecting keyboard input.
- System: RISC OS SharedCLibrary build now supports networking.
- System: Now compiles on Solaris 11 (tested x86_64). Use "gmake".
- Graphics: Fixed GCOL action codes 5-7 for filled rectangles (this function
  does not use the plot_pixel prototype).
- Graphics: Fixed an error where VDU variables 138 and 139 were erroneously
  clamping to pixel boundaries based on the current screen mode scaling.
- BASIC: Fix LVAR so it doesn't choke on stupidly long variable names.
- BASIC: Tidied up an earlier cheat - when interpreting @%, if the top byte
  is non-zero then STR$ obeys @% so we were masking against &FF - but we
  were setting all the top bits when using "+". This is fixed now the top
  byte is set to 1 instead. (We still check the byte is non-zero.)
- BASIC: Raising to the power has better bounds checking.
- Examples: Telstar client: Removed unnecessary code, TEEFAX server change,
  added new Teletext services and a custom address option.

* V1.22.13 - 26 January 2022
- System: Stricter handling of oversize variable and PROC/FN names.
- System: Improved handling of ESCAPE under RISC OS (notably, it no longer
  crashes the interpreter).
- System: Improve behaviour on Linux console framebuffer, particulary
  Raspberry Pi. Experience may vary across other hardware.
- System: Remove the old keyboard code, JGH's NEWKBD code is now the only
  version present.
- System: On non-RISC OS platforms, when using LOAD, CHAIN, OPENIN and
  OPENUP, if file isn't found, retry with a .bbc suffix before complaining.
  SAVE and OPENOUT will not use a .bbc suffix unless explicitly provided in
  the filename.
- System: Permit system memory to be up to 4194303K (4GB less 1K)
- System: Programs saved under RISC OS now get file type &FD1 (allocated by