@@ -5,6 +5,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: Workaround for sdl12-compat library bug affecting keyboard input.
 - System: RISC OS SharedCLibrary build now supports networking.
 - System: Now compiles on Solaris 11 (tested x86_64). Use "gmake".
+- System: Text mode build available for Minix 3 (no networking yet).
+  Use gmake -f build/makefile.minix
 - Graphics: Fixed GCOL action codes 5-7 for filled rectangles (this function
   does not use the plot_pixel prototype).
 - Graphics: Fixed an error where VDU variables 138 and 139 were erroneously
